--- a/GPSTest/src/main/res/xml/preferences.xml
+++ b/GPSTest/src/main/res/xml/preferences.xml
@@ -10,7 +10,18 @@
             android:dialogTitle="@string/pref_map_type_dialog_title"            
             android:entries="@array/map_type_entries"
             android:entryValues="@array/map_type_values"
-            android:defaultValue="1" />        
+            android:defaultValue="1" />
+        <CheckBoxPreference
+            android:key="@string/pref_key_rotate_map_with_compass"
+            android:title="@string/pref_rotate_map_with_compass_title"
+            android:summary="@string/pref_rotate_map_with_compass_summary"
+            android:defaultValue="true" />
+        <CheckBoxPreference
+            android:key="@string/pref_key_tilt_map_with_sensors"
+            android:title="@string/pref_tilt_map_with_sensors_title"
+            android:summary="@string/pref_tilt_map_with_sensors_summary"
+            android:dependency="@string/pref_key_rotate_map_with_compass"
+            android:defaultValue="true" />
     </PreferenceCategory>
 
     <PreferenceCategory
