--- a/GPSTest/src/main/res/values/themes.xml
+++ b/GPSTest/src/main/res/values/themes.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="GpsSwitchTheme" parent="@style/Theme.AppCompat">
+    <style name="Theme.GpsTest" parent="@style/Theme.AppCompat">
+        <!--   App branding color for the app bar -->
+        <item name="colorPrimary">@color/theme_primary</item>
+        <!--   Darker variant for the status bar and contextual app bars -->
+        <item name="colorPrimaryDark">@color/theme_primary_dark</item>
+        <!--   Theme UI controls like checkboxes and text fields -->
+        <item name="colorAccent">@color/theme_accent</item>
+
         <item name="asb_switchStyle">@style/Widget.Holo.CompoundButton.Switch</item>
     </style>
 </resources>
